Changelog
=========

5.1.dev0 - (unreleased)
-----------------------

5.0 - (2015-08-18)
------------------
* Change: Auto-include zcml within plone context in order to make this package
  work without having to add it within buildout zcml directive.
  [avoinea]

4.9 - (2015-03-17)
------------------
* Change: Switched to curl in the jenkins build install script
  [olimpiurob refs #22402]
* Change: Changed fetch url for jenkins build install script to the install
  script from the main EEA CPB repository
  [olimpiurob refs #22402]

4.8 - (2014-01-22)
------------------
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]
* Bug fix: removed wrongly added blockquotes within README.rst
  [ichim-david refs #18064]

4.7 - (2013-10-04)
------------------
* Change: updated zope imports with the versions that require minimum Plone 4.1
  for eea.google
  [ichimdav refs #15651]

4.6 - (2013-06-17)
------------------
* Change: updated link to site setup
  [ghicale]

4.5 - (2013-02-04)
------------------
* Bug Fix: Fixed to work with the 2.4 API
  [batradav refs #9551]

4.4 - (2012-07-13)
------------------
* Bug Fix: Fixed i18n missing tags in .pt files
  [prospchr refs #5160]

4.3 - (2012-06-12)
------------------
* Bug fix: fixed markup of HISTORY.txt file
  [ciobabog refs #5231]

4.2 - (2012-02-06)
------------------
 * No changes

4.0 - (2011-11-07)
------------------
* Cleanup: of pylint, pyflakes warnings
  [ichimdav #4140, #4141]
* Feature: added upgrade steps
  [voineali #4392]
* Feature: Plone 4.x compatible release
  [ghicaale #4212]

1.2 (2010-02-24)
----------------
* Bug fix: fixed stinky egg
  [ghicale]

1.1 (2010-02-24)
----------------
* Bug fix: fixed layout in edit mode
  [voineali #2685]

1.0 (2009-11-09)
----------------
* Initial release
  [voineali]
