@@ -3,6 +3,8 @@ Changelog
 
 5.1.dev0 - (unreleased)
 -----------------------
+* Bugfix: set socket timeout to prevent hanging out connection on xmlrpc calling
+  [lucas refs #29063]
 
 5.0 - (2015-08-18)
 ------------------
